vendor/vnc/Viewer.h




/**
 * @name Functions for managing the status of a viewer connection
 * @{
 */

/**
 * Enumeration of connection statuses.  These are returned by
 * vnc_Viewer_getConnectionStatus() to query the status of the connection for
 * a given viewer.
 */
typedef enum {
  /** The viewer is not connected to a server. */
  vnc_Viewer_Disconnected,
  /**
   * The viewer is negotiating a connection to a server (includes
   * authentication).
   */
  vnc_Viewer_Connecting,
  /** The viewer is connected to a server. */
  vnc_Viewer_Connected,
  /**
   * vnc_Viewer_disconnect() has been called but we've not yet disconnected
   * from the server.
   */
   vnc_Viewer_Disconnecting
} vnc_Viewer_ConnectionStatus;


/**
 * Enumeration of disconnection flags.
 */
typedef enum {
  /**
   * The disconnection message could be shown to the user.  This is set if the
   * server sent this flag with its disconnection message, or the viewer
   * disconnected due to an error.
   */
  vnc_Viewer_AlertUser = 1,
  /** The connection has been broken, but a reconnection attempt may succeed. */
  vnc_Viewer_CanReconnect = 2,
} vnc_Viewer_DisconnectFlags;


/** Callback receiving state-change notifications for a Viewer. */
typedef struct {
  /**
   * Notification that is called when the viewer begins a connection attempt to
   * the server.  This callback is optional.
   *
   * When vnc_CloudConnector_connect() is called, the connecting callback will
   * be invoked on the next turn of the event loop, so it is normally not useful
   * to implement this callback, since the application's UI state can be updated
   * straight away.
   *
   * If however the viewer creates connections using a Cloud listener, then the
   * connecting callback is essential to implement.  This is because each viewer
   * object can only handle a single connection at a time, so it makes no sense
   * to continue listening once the viewer has started handling a connection.
   * If a second connection comes in, the viewer will not be able to accept it
   * and an error will be logged.  To stop listening, the Cloud listener should
   * be destroyed from the connecting callback.
   */
  void
  (*connecting)(void* userData,
                vnc_Viewer* viewer);

  /**
   * Notification that is called when the viewer successfully connects to a
   * server (after authentication).  This callback is optional.
   */
  void
  (*connected)(void* userData,
               vnc_Viewer* viewer);

  /**
   * Notification that is called when the viewer disconnects from the server.
   * This callback is optional.
   *
   * @param reason See vnc_Viewer_getDisconnectReason() for possible
   *     disconnection reasons.
   * @param flags Zero or more of the @ref vnc_Viewer_DisconnectFlags flags.
   */
  void
  (*disconnected)(void* userData,
                  vnc_Viewer* viewer,
                  const char* reason,
                  int flags);
} vnc_Viewer_ConnectionCallback;


/**
 * Sets the callbacks for the Viewer to call when various events occur during
 * its lifetime.
 *
 * @param callback The new connection callback.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The callback is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setConnectionCallback(
    vnc_Viewer* viewer,
    _In_opt_ const vnc_Viewer_ConnectionCallback* callback,
    void* userData);


/**
 * Returns the viewer's @ref vnc_ConnectionHandler for accepting connections.
 * The connection handler must not be used after the viewer has been destroyed;
 * any Cloud listener using this viewer must be destroyed before the viewer
 * itself.
 */
VNC_SDK_API vnc_ConnectionHandler*
vnc_Viewer_getConnectionHandler(vnc_Viewer* viewer);


/**
 * Returns the status of the viewer's connection.  See
 * vnc_Viewer_ConnectionStatus() for possible values.
 */
VNC_SDK_API vnc_Viewer_ConnectionStatus
vnc_Viewer_getConnectionStatus(vnc_Viewer* viewer);


/**
 * Returns the address of the viewer's server.  The format of the string is
 * <tt>[vnccloud:\<cloud-address\>]</tt> for VNC Cloud addresses.  The string is
 * only guaranteed to be valid until the next call to any SDK function.
 *
 * @param viewer The Viewer.
 *
 * @return The address as a NULL-terminated string, or NULL in the case of an
 *     error, in which case call vnc_getLastError() to get the error code.
 *
 * @retval UnexpectedCall
 *     The viewer is not connected
 */
VNC_SDK_API const char* vnc_Viewer_getPeerAddress(vnc_Viewer* viewer);


/**
 * Disconnects this viewer from the server.  Sets the disconnection reason to
 * @c ViewerClosedConnection.  This method does nothing if the viewer is not
 * currently connected.  Once disconnected you may subsequently connect the
 * viewer to the same server again.
 *
 * @param viewer The Viewer.
 *
 * @return #vnc_success.
 */
VNC_SDK_API vnc_status_t vnc_Viewer_disconnect(vnc_Viewer* viewer);


/**
 * Returns a string ID representing the reason for the last viewer
 * disconnection.  Returns NULL if there have not been any disconnections, or
 * the viewer has been connected again since the last disconnection.
 *
 * Some of the connection reasons are sent by the server to explain the reason
 * for ending the connection.  These disconnection reasons are free-form and a
 * third-party server may send reasons not on this list.  To help diagnosing the
 * cause of the disconnection, vnc_Viewer_getDisconnectMessage() can be used to
 * get a human-readable message sent by the server which explains the reason.
 * Possible reasons sent by the server are:
 *
 *  - @c AuthFailure: the viewer user did not provide appropriate credentials
 *  - @c ConnTimeout: the connection reached its maximum duration
 *  - @c IdleTimeout: the connection timed out after no activity.  This can
 *    happen when the connection is being established if the requested
 *    credentials are not sent within a reasonable amount of time.
 *  - @c ServerShutdown: the server process has shut down (the disconnection
 *    message may include further details)
 *  - @c ServerSuspended: the server machine is going in suspend mode
 *  - @c TooManySecFail: too many security failures have occurred in a short
 *    space of time, so the server has rejected the connection
 *  - @c UserSwitch: the server machine is switching desktops, causing a
 *    temporary disconnection.
 *
 * In addition, @c ServerClosedConnection indicates a normal disconnection
 * initiated by the server.
 *
 * Some of the reasons occur when the viewer initiates the disconnection, in
 * which case the list of possible disconnection reasons is known in advance.
 * Possible reasons known to the viewer are:
 *
 *  - @c CloudAuthenticationFailed: the Cloud password or address is incorrect
 *  - @c CloudConnectionRefused: the local Cloud address does not have
 *    permission to connect to the server's Cloud address
 *  - @c CloudTargetNotFound: there is no server listening on the Cloud address
 *  - @c DataStoreError: there is no data store
 *  - @c ViewerCancelledAuthentication: authentication was cancelled by calling
 *    vnc_Viewer_sendAuthenticationResponse() with @c ok as #vnc_false
 *  - @c ViewerClosedConnection: the connection was closed by calling
 *    vnc_Viewer_disconnect()
 *  - @c ViewerRejectedConnection: the connection was rejected by the viewer not
 *    accepting the connection security or peer identity via the
 *    vnc_Viewer_PeerVerificationCallback::verifyPeer callback.
 *
 * Finally, some of the reasons can occur both from the viewer or server, or
 * somewhere in between! Possible reasons are:
 *
 *  - @c ConnectivityError: a connection to the server could not be established,
 *    or there was an error reading or writing to the peer
 *  - @c ConnectionDropped: the connection was closed at the transport level,
 *    with no closing handshake
 *  - @c ConnectionNegotiationError: the connection could not be established due
 *    to an error during negotiation with the peer; consult the debug logs for
 *    more information.
 *  - @c ConnectionResolveError: a specified Direct TCP hostname or IP address
 *    is malformed, or is not legitimate (e.g. DNS lookup fails), or the
 *    resolver service cannot be reached; consult the debug logs for more
 *    information.
 *
 * If cause is not recognized, the reason will be @c Unknown; please consult the
 * debug logs for more information on the underlying cause of the disconnection.
 */
VNC_SDK_API _Ret_opt_z_ const char*
vnc_Viewer_getDisconnectReason(vnc_Viewer* viewer);