src/viewer.rs

#[doc = " The viewer is not connected to a server."]
pub const vnc_Viewer_ConnectionStatus_vnc_Viewer_Disconnected: vnc_Viewer_ConnectionStatus = 0;
#[doc = " The viewer is negotiating a connection to a server (includes"]
#[doc = " authentication)."]
pub const vnc_Viewer_ConnectionStatus_vnc_Viewer_Connecting: vnc_Viewer_ConnectionStatus = 1;
#[doc = " The viewer is connected to a server."]
pub const vnc_Viewer_ConnectionStatus_vnc_Viewer_Connected: vnc_Viewer_ConnectionStatus = 2;
#[doc = " vnc_Viewer_disconnect() has been called but we've not yet disconnected"]
#[doc = " from the server."]
pub const vnc_Viewer_ConnectionStatus_vnc_Viewer_Disconnecting: vnc_Viewer_ConnectionStatus = 3;
#[doc = " Enumeration of connection statuses.  These are returned by"]
#[doc = " vnc_Viewer_getConnectionStatus() to query the status of the connection for"]
#[doc = " a given viewer."]
pub type vnc_Viewer_ConnectionStatus = ::std::os::raw::c_uint;
#[doc = " The disconnection message could be shown to the user.  This is set if the"]
#[doc = " server sent this flag with its disconnection message, or the viewer"]
#[doc = " disconnected due to an error."]
pub const vnc_Viewer_DisconnectFlags_vnc_Viewer_AlertUser: vnc_Viewer_DisconnectFlags = 1;
#[doc = " The connection has been broken, but a reconnection attempt may succeed."]
pub const vnc_Viewer_DisconnectFlags_vnc_Viewer_CanReconnect: vnc_Viewer_DisconnectFlags = 2;
#[doc = " Enumeration of disconnection flags."]
pub type vnc_Viewer_DisconnectFlags = ::std::os::raw::c_uint;
#[doc = " Callback receiving state-change notifications for a Viewer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Viewer_ConnectionCallback {
    #[doc = " Notification that is called when the viewer begins a connection attempt to"]
    #[doc = " the server.  This callback is optional."]
    #[doc = ""]
    #[doc = " When vnc_CloudConnector_connect() is called, the connecting callback will"]
    #[doc = " be invoked on the next turn of the event loop, so it is normally not useful"]
    #[doc = " to implement this callback, since the application's UI state can be updated"]
    #[doc = " straight away."]
    #[doc = ""]
    #[doc = " If however the viewer creates connections using a Cloud listener, then the"]
    #[doc = " connecting callback is essential to implement.  This is because each viewer"]
    #[doc = " object can only handle a single connection at a time, so it makes no sense"]
    #[doc = " to continue listening once the viewer has started handling a connection."]
    #[doc = " If a second connection comes in, the viewer will not be able to accept it"]
    #[doc = " and an error will be logged.  To stop listening, the Cloud listener should"]
    #[doc = " be destroyed from the connecting callback."]
    pub connecting: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, viewer: *mut vnc_Viewer),
    >,
    #[doc = " Notification that is called when the viewer successfully connects to a"]
    #[doc = " server (after authentication).  This callback is optional."]
    pub connected: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, viewer: *mut vnc_Viewer),
    >,
    #[doc = " Notification that is called when the viewer disconnects from the server."]
    #[doc = " This callback is optional."]
    #[doc = ""]
    #[doc = " @param reason See vnc_Viewer_getDisconnectReason() for possible"]
    #[doc = "     disconnection reasons."]
    #[doc = " @param flags Zero or more of the @ref vnc_Viewer_DisconnectFlags flags."]
    pub disconnected: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            reason: *const ::std::os::raw::c_char,
            flags: ::std::os::raw::c_int,
        ),
    >,
}
#[test]
fn bindgen_test_layout_vnc_Viewer_ConnectionCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Viewer_ConnectionCallback>(),
        24usize,
        concat!("Size of: ", stringify!(vnc_Viewer_ConnectionCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Viewer_ConnectionCallback>(),
        8usize,
        concat!("Alignment of ", stringify!(vnc_Viewer_ConnectionCallback))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_ConnectionCallback>())).connecting as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_ConnectionCallback),
            "::",
            stringify!(connecting)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_ConnectionCallback>())).connected as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_ConnectionCallback),
            "::",
            stringify!(connected)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_ConnectionCallback>())).disconnected as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_ConnectionCallback),
            "::",
            stringify!(disconnected)
        )
    );
}
extern "C" {
    #[doc = " Sets the callbacks for the Viewer to call when various events occur during"]
    #[doc = " its lifetime."]
    #[doc = ""]
    #[doc = " @param callback The new connection callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The callback is invalid"]
    pub fn vnc_Viewer_setConnectionCallback(
        viewer: *mut vnc_Viewer,
        callback: *const vnc_Viewer_ConnectionCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Returns the viewer's @ref vnc_ConnectionHandler for accepting connections."]
    #[doc = " The connection handler must not be used after the viewer has been destroyed;"]
    #[doc = " any Cloud listener using this viewer must be destroyed before the viewer"]
    #[doc = " itself."]
    pub fn vnc_Viewer_getConnectionHandler(viewer: *mut vnc_Viewer) -> *mut vnc_ConnectionHandler;
}
extern "C" {
    #[doc = " Returns the status of the viewer's connection.  See"]
    #[doc = " vnc_Viewer_ConnectionStatus() for possible values."]
    pub fn vnc_Viewer_getConnectionStatus(viewer: *mut vnc_Viewer) -> vnc_Viewer_ConnectionStatus;
}
extern "C" {
    #[doc = " Returns the address of the viewer's server.  The format of the string is"]
    #[doc = " <tt>[vnccloud:\\<cloud-address\\>]</tt> for VNC Cloud addresses.  The string is"]
    #[doc = " only guaranteed to be valid until the next call to any SDK function."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = ""]
    #[doc = " @return The address as a NULL-terminated string, or NULL in the case of an"]
    #[doc = "     error, in which case call vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     The viewer is not connected"]
    pub fn vnc_Viewer_getPeerAddress(viewer: *mut vnc_Viewer) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Disconnects this viewer from the server.  Sets the disconnection reason to"]
    #[doc = " @c ViewerClosedConnection.  This method does nothing if the viewer is not"]
    #[doc = " currently connected.  Once disconnected you may subsequently connect the"]
    #[doc = " viewer to the same server again."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = ""]
    #[doc = " @return #vnc_success."]
    pub fn vnc_Viewer_disconnect(viewer: *mut vnc_Viewer) -> vnc_status_t;
}
